# marl-football-2d

./: .gitignore  CONTRIBUTION.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements.txt  setup.py
env/: __init__.py  config.py  engine.py  environment.py  models.py  opponents.py  schema.py  simulation.py  steering.py  utils.py
gridenv/: config.py  simulation.py
marl/gridenv/: config.py  environment.py  simulation.py
marl/policy_based/: __init__.py  agents.py  simulation_2.py  simulation_3.py
models/checkpoint/: episode_100.pth  episode_150.pth  episode_200.pth  episode_50.pth
playground/: Demo.ipynb  physics_tuning.ipynb  scaling.ipynb
rl/: hl_actions.py  reward.py
rl/one/: eval.py  ppo.py  rollout.py  train.py  utils.py
rl/one_vs_one/: ppo.py  rollout.py  train.py  utils.py
rl/ppo/: train.py  train.sh
rl/sac/: train.py  train.sh
tests/: cuda.py
