[project]
name = "marl-football-2d"
version = "0.1.0"
description = "2D Multi-agent football simulation"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "pygame",
  "pydantic",
  "pymunk>=6.11.1",
  "mlflow>=2.17.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["env", "rl", "marl", "gameai"]
